# VeraCite

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
eval/: build_manifest.py  findings.csv  review.html  status.py  update_findings.py
examples/: sample.bib
tests/: test_bibcheck.py  test_catalog.py  test_checkpoint.py  test_veracite.py  test_webcheck.py
tests/fixtures/: clean.bib  structural.bib  style.bib
tools/: gen_datamodel.py
veracite/: __init__.py  __main__.py  catalog.py  checkpoint.py  cli.py  compare.py  config.py  datamodel.py  http.py  identifiers.py  llm.py  models.py  normalize.py  parser.py  pipeline.py  record.py  report.py  rules.py  sources.py  titles.py  verify.py  webcheck.py
veracite/data/: biblatex_datamodel.json  journal_abbrev.json
web/: README.md  app.js  check.cgi  index.html  stats.cgi  style.css
