[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "veracite"
version = "0.1.0"
description = "A bibliography health checker for LaTeX projects."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Shannon Whitlock" }]
keywords = ["bibtex", "biblatex", "bibliography", "latex", "citations", "doi", "arxiv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = []

[project.optional-dependencies]
# requests is optional; VeraCite falls back to the stdlib urllib without it.
http = ["requests"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/Shannon-Whitlock/veracite"
Repository = "https://github.com/Shannon-Whitlock/veracite"
Issues = "https://github.com/Shannon-Whitlock/veracite/issues"

[project.scripts]
veracite = "veracite.cli:main"

[tool.setuptools]
packages = ["veracite"]

[tool.setuptools.package-data]
# the biblatex datamodel ships inside the package
veracite = ["data/*.json"]
