[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "veracite"
# Single source of truth: VERSION lives in veracite/config.py and is read here
# dynamically (see [tool.setuptools.dynamic] below), so the package version is bumped
# in ONE place. test_version_consistency guards the remaining hand-kept copies
# (CITATION.cff).
dynamic = ["version"]
description = "A deterministic auditor for BibTeX/biblatex bibliographies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Shannon Whitlock" }]
keywords = ["bibtex", "biblatex", "bibliography", "latex", "citations", "doi", "arxiv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = []

[project.optional-dependencies]
# requests is optional; VeraCite falls back to the stdlib urllib without it.
http = ["requests"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/Shannon-Whitlock/VeraCite"
Repository = "https://github.com/Shannon-Whitlock/VeraCite"
Issues = "https://github.com/Shannon-Whitlock/VeraCite/issues"

[project.scripts]
veracite = "veracite.cli:main"

[tool.setuptools]
packages = ["veracite"]

[tool.setuptools.dynamic]
# Read the version from veracite/config.py's VERSION at build time, so it is never
# hand-copied into this file. Bump it in config.py alone.
version = { attr = "veracite.config.VERSION" }

[tool.setuptools.package-data]
# the biblatex datamodel ships inside the package
veracite = ["data/*.json"]
